--- a/guides/gnl-tao-te-ching/index.html
+++ b/guides/gnl-tao-te-ching/index.html
@@ -2,11 +2,11 @@
 <html><head>
   <meta charset="utf-8">
   <title>Index</title>
-  <link rel="stylesheet" href="https://nathanstilwell.com/scss/dracula.css">
+  <link rel="stylesheet" href="https://nathanstilwell.com/forrestry-hugo-demo/scss/dracula.css">
 </head>
 <body><header>
   <div>
-    <a href="/">
+    <a href="/forrestry-hugo-demo/">
       <img
         src="https://flowcdn.io/assets/docs/0.8.19/img/flow-logo-white.svg"
         alt="Flow logo"
