I do not know why parts one and two are not generating

--- a/guides/gnl-tao-te-ching/index.html
+++ b/guides/gnl-tao-te-ching/index.html
@@ -46,9 +46,9 @@
 
 <p>Even an original text, translated as faithfully as possible, might remain inaccessible to the modern reader unable to place it within its original context. The intention of this work is to construct a document that closely corresponds with the best modern translations of Lao Tse, but which is blunt, easy and useful to read within a modern context.</p>
 
-<h2 id="part-1-https-nathanstilwell-com-the-gnl-tao-te-ching-part1"><a href="https://nathanstilwell.com/the-gnl-tao-te-ching/#part1">Part 1</a></h2>
+<h2 id="part-1-part-1"><a href="part-1">Part 1</a></h2>
 
-<h2 id="part-2-https-nathanstilwell-com-the-gnl-tao-te-ching-part2"><a href="https://nathanstilwell.com/the-gnl-tao-te-ching/#part2">Part 2</a></h2>
+<h2 id="part-2-part-2"><a href="part-2">Part 2</a></h2>
 
 </main>
 
